[package]
name = "tokio-cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
tokio-cron-scheduler = "*"
futures = "0.3.21"
chrono = "0.4.19"



[[example]]
name = "streams"

[[example]]
name = "block_on"

[[example]]
name = "interval_task"

[[example]]
name = "channel_task"

[[example]]
name = "scheduled_task"

[[example]]